; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/gdbserver/extr_gdbreplay.c_play.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/gdbserver/extr_gdbreplay.c_play.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [46 x i8] c"Sync error skipping blank during write to gdb\00", align 1
@EOL = common dso_local global i32 0, align 4
@remote_desc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @play to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @play(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8, align 1
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @logchar(i32* %5)
  store i32 %6, i32* %3, align 4
  %7 = icmp ne i32 %6, 32
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @sync_error(i32* %9, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i8 signext 32, i32 %10)
  br label %12

12:                                               ; preds = %8, %1
  br label %13

13:                                               ; preds = %18, %12
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @logchar(i32* %14)
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* @EOL, align 4
  %17 = icmp ne i32 %15, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %13
  %19 = load i32, i32* %3, align 4
  %20 = trunc i32 %19 to i8
  store i8 %20, i8* %4, align 1
  %21 = load i32, i32* @remote_desc, align 4
  %22 = call i32 @write(i32 %21, i8* %4, i32 1)
  br label %13

23:                                               ; preds = %13
  ret void
}

declare dso_local i32 @logchar(i32*) #1

declare dso_local i32 @sync_error(i32*, i8*, i8 signext, i32) #1

declare dso_local i32 @write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
